--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 #awsmobilejs
-appsync-info.json
-aws-info.json
-project-info.json
-aws-exports.*
-awsmobilejs/.awsmobile/backend-build
-awsmobilejs/\#current-backend-info
-~awsmobilejs-*/
+# appsync-info.json
+# aws-info.json
+# project-info.json
+# aws-exports.*
+# awsmobilejs/.awsmobile/backend-build
+# awsmobilejs/\#current-backend-info
+# ~awsmobilejs-*/
 
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
